Update plugin versions and support Java 21 build
Update spotbugs and add necessary exclusions
  Fix one small thing in Context that was making it upset
Update other plugins
Make spotless work -- currently only runs on Java 11

Set time zone in Mozilla tests

Move many tests into modules for better modularity

Add publication info for JARs

The "rhino" module will include an all-in-one JAR for backward
compatibility, but most new code should combine the four modular JARs
instead.

Enable some tests that work now because of Java 11 minimum

Get Gradle to stop trying to download Java versions.